--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -15,6 +15,16 @@
   width: 300px;
 }
 
+.loading {
+  align-items: center;
+  background: #333;
+  color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
+
 @media ( prefers-reduced-motion : no-preference ) {
 
   .logo {
