--- a/src/styles/Ranking.css
+++ b/src/styles/Ranking.css
@@ -4,7 +4,7 @@
   color: #fafafa;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   width: 100vw;
 }
