--- a/src/styles/Ranking.css
+++ b/src/styles/Ranking.css
@@ -4,8 +4,8 @@
   color: #fafafa;
   display: flex;
   flex-direction: column;
-  height: 100vh;
   margin: 0 auto;
+  min-height: 100vh;
   width: 100vw;
 }
 
